Committing the changes made to the data models as well as added adapter to handle list of latest news list and a new layout to show the news details on click and other minor changes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
+        <activity android:name=".ui.DisplayNews"></activity>
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
