--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,16 +19,22 @@ android {
     }
 }
 
+ext {
+    supportLibVersion = '23.2.1'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
+    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
 
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
     compile 'com.google.code.gson:gson:2.6.2'
 
     provided 'org.glassfish:javax.annotation:10.0-b28'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
